[tool.poetry]
name = "bankless-bot"
version = "1.0.0"
description = "A bot that buys and sells ETH based on tweets from certain Bankless folks."
authors = ["Matthew Ahrenstein <matt@ahrenstein.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
requests = "^2.25.1"
pylint = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
